src/test/deca/context/valid/oracle/decl_same_line.deca
{
    float f, g;
    int x = 0, y;
    int h, j = 1;
    int i = 0, k = i, a, b = a;
}