src/test/deca/context/invalid/oracle/decl_with_not_decl_var2.deca
{
    bool x, y = z || true;
}